manifests/seaweedfs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seaweedfs
spec:
  selector:
    app: seaweedfs
  ports:
    - name: filer
      port: 8888
      targetPort: 8888
